Fix flash width on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,3 +42,8 @@
     color: black;
     text-align: center;
 }
+@media (max-width: 768px) {
+  .alert {
+      width: 250px;
+  }
+}
